--- a/list.html
+++ b/list.html
@@ -14,9 +14,11 @@
     <li>卵</li>
 </ul>
       <h2>作り方</h2>
-      <ol>お米炊く</ol>
-      <ol>卵をかける</ol>
-      <ol>かき混ぜる</ol>
+      <ol>
+        <li>お米を炊く</li>
+        <li>卵をかける</li>
+        <li>かき混ぜる</li>
+      </ol>
 
 
 
