--- a/list.html
+++ b/list.html
@@ -15,10 +15,10 @@
 </ul>
       <h2>作り方</h2>
       <ol>
-        <li>お米を炊く</li>
-        <li>卵をかける</li>
-        <li>かき混ぜる</li>
-      </ol>
+<li>ご飯を炊く</li>
+<li>卵をかける</li>
+<li>かき混ぜる</li>
+ </ol>
 
 
 
