--- a/list.html
+++ b/list.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>野菜炒め</title>
+    <title>卵かけご飯</title>
   </head>
   <body>
       <h1>卵かけご飯</h1>
