--- a/image.html
+++ b/image.html
@@ -5,6 +5,7 @@
     <title>リンク</title>
   </head>
   <body>
-<img src="IMG_0789.JPG" alt="花火の写真"style="width:300px;"/>
+<img src="IMG_0894.jpg" alt="車の写真"
+style="width:300px;"/>
 </body>
 </html>
