--- a/style.html
+++ b/style.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>リンク</title>
+    <link rel="stylesheet" href="style.css"/>
     <style>
         #bar{color:yellow;}
     </style>
