--- a/style.html
+++ b/style.html
@@ -5,7 +5,8 @@
     <title>リンク</title>
     <link rel="stylesheet" href="style.css"/>
     <style>
-        #bar{color:yellow;}
+      .foo {color:blue;}  
+      #bar{color:yellow;}
     </style>
 </head>
   <body>
