--- a/table.html
+++ b/table.html
@@ -17,14 +17,14 @@
     border-collapse: collapse;
 }
 .table1 th,.table1 td{
-    border:5px dashed red;
+    border:5px dashed white;
 }
 .table1{
     border-collapse: collapse;
     width:100px;
 }
 .table1,.table1 td{
-    border: 5px dashed red;
+    border: 5px dashed white;
 }
 </style>  
 </head>
