--- a/table.html
+++ b/table.html
@@ -16,15 +16,15 @@
 .table1 {
     border-collapse: collapse;
 }
-.table1 th,.table1 td{
-    border:5px dashed white;
+.table1 th,.table td{
+    border:5px dashed red;
 }
 .table1{
     border-collapse: collapse;
     width:100px;
 }
 .table1,.table1 td{
-    border: 5px dashed white;
+    border: 5px dashed red;
 }
 </style>  
 </head>
