--- a/table.html
+++ b/table.html
@@ -31,8 +31,8 @@
   <body>
 <table class="table1">
     <tr><th>番号</th><th>名前</th></tr>
-    <tr><th>１</th><th>たろう</th></tr>
-    <tr><th>２</th><th>じろう</th></tr>
+    <tr><td>１</td><td>たろう</td></tr>
+    <tr><td>２</td><td>じろう</td></tr>
 </table>
   </body>
 </html>
