--- a/mojikazari.html
+++ b/mojikazari.html
@@ -10,9 +10,11 @@
 
 <body>
 
-    <p class="size_20">大きい文字</p>
-    <p class="red">赤い文字</p>
-    <s class="line-through">取り消し線</s>
+   <ul>
+    <li class="size_20">大きい文字</li>
+    <li class="red">赤い文字</li>
+    <li class="line-through">取り消し線</li>
+   </ul>
 </body>
 
 </html>
