--- a/mojikazari.html
+++ b/mojikazari.html
@@ -12,8 +12,8 @@
 
    <ul>
     <li class="foo">大きい文字</li>
-    <li id="bar1">赤い文字</li>
-    <li id="bar2">取り消し線</li>
+    <li class="bar1">赤い文字</li>
+    <li class="bar2">取り消し線</li>
    </ul>
 </body>
 
