--- a/mojikazari.html
+++ b/mojikazari.html
@@ -11,9 +11,9 @@
 <body>
 
    <ul>
-    <li class="foo">大きい文字</li>
-    <li class="bar1">赤い文字</li>
-    <li class="bar2">取り消し線</li>
+    <li class="size_20">大きい文字</li>
+    <li class="red">赤い文字</li>
+    <li class="line-through">取り消し線</li>
    </ul>
 </body>
 
