--- a/mojikazari.html
+++ b/mojikazari.html
@@ -11,7 +11,7 @@
 <body>
 
    <ul>
-    <li class="size_20">大きい文字</li>
+    <li class="foo">大きい文字</li>
     <li id="bar1">赤い文字</li>
     <li id="bar2">取り消し線</li>
    </ul>
