--- a/mojikazari.html
+++ b/mojikazari.html
@@ -4,17 +4,14 @@
 <head>
   <meta charset='utf-8' />
   <title>文字飾り</title>
-  <link rel="stylesheet" href="font.css">
-
 </head>
 
 <body>
-
-   <ul>
-    <li class="foo">大きい文字</li>
-    <li id="bar1">赤い文字</li>
-    <li id="bar2">取り消し線</li>
-   </ul>
+  <ul>
+    <li><font size="20pt">大きい文字</font></li>
+    <li><font color="red">赤い文字</font></li>
+    <li><strike>取り消し線</strike></li>
+  </ul>
 </body>
 
 </html>
