--- a/mojikazari.html
+++ b/mojikazari.html
@@ -4,14 +4,16 @@
 <head>
   <meta charset='utf-8' />
   <title>文字飾り</title>
+  <link rel="stylesheet" href="font.css">
 </head>
 
 <body>
-  <ul>
-    <li><font size="20pt">大きい文字</font></li>
-    <li><font color="red">赤い文字</font></li>
-    <li><strike>取り消し線</strike></li>
-  </ul>
+
+   <ul>
+     <li><span class="u11">大きい文字</span></li>
+     <li><span class="u12">赤い文字</span></li>
+     <li class="u13">取り消し線</li>
+   </ul>
 </body>
 
 </html>
