--- a/mojikazari.html
+++ b/mojikazari.html
@@ -10,9 +10,9 @@
 <body>
 
    <ul>
-     <li><span class="u11">大きい文字</span></li>
-     <li><span class="u12">赤い文字</span></li>
-     <li class="u13">取り消し線</li>
+     <li><span class="ul1">大きい文字</span></li>
+     <li><span class="ul2">赤い文字</span></li>
+     <li class="ul3">取り消し線</li>
    </ul>
 </body>
 
